# acgsnsync

./: .gitignore  BMCLAPI集成说明.md  Minecraft启动器使用说明.md  PRIVACY_POLICY.md  README.md  USER_AGREEMENT.md  package-lock.json  package.json  tailwind.config.js  test-build.bat  修复说明.md  功能使用说明.md  增强文件浏览器说明.md  导出包整合规范.md  快速开始-Minecraft启动器.md  执行指令.md  测试修复.md  调试测试指南.md
.github/workflows/: release.yml
public/: loginok.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  minecraft.rs  oauth.rs  systeminfo.rs
src/atoms/: index.ts
src/components/: about-page.tsx  custom-sync-dialog.tsx  custom-sync-importer.tsx  enhanced-file-item.tsx  exclusion-editor.tsx  exclusion-manager-dialog.tsx  export-tab.tsx  file-browser.tsx  file-tree.tsx  home-page.tsx  logo.tsx  minecraft-launcher.tsx  news-detail-dialog.tsx  proxied-image.tsx  settings-dialog.tsx  sync-confirmation.tsx  sync-market.tsx  system-info-tab.tsx  target-directory-selector.tsx  update-dialog.tsx
src/components/ui/: sidebar.tsx
src/hooks/: use-toast.ts
