[package]
name = "acgstation-sync"
version = "1.0.0"
description = "ACGStation 游戏文件同步器"
authors = ["ACGStation"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-file", "fs-create-dir", "fs-remove-file", "dialog-open", "fs-read-dir", "fs-copy-file", "fs-remove-dir", "fs-exists", "fs-write-file", "http-all", "shell-open", "path-all", "os-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
