[package]
name = "acgstation-sync"
version = "1.2.1"
description = "ACGStation 游戏文件同步器"
authors = ["ACGStation"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "dialog-all", "fs-read-dir", "fs-exists", "shell-open", "fs-remove-dir", "fs-remove-file", "fs-create-dir", "http-all", "path-all", "os-all", "fs-read-file", "fs-write-file", "fs-copy-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
walkdir = "2.3"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rayon = "1.10.0"
num_cpus = "1.16.0"
whoami = "1.5.1"
base64 = "0.22.1"
once_cell = "1.19.0"
tiny_http = "0.12.0"
url = "2.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
