[package]
name = "acgstation-sync"
version = "1.2.2"
description = "ACGStation 游戏文件同步器"
authors = ["ACGStation"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-all", "path-all", "os-all", "fs-remove-file", "fs-exists", "fs-remove-dir", "fs-read-dir", "fs-copy-file", "fs-read-file", "fs-write-file", "fs-create-dir", "shell-open", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
walkdir = "2.3"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12.5", features = ["blocking", "json", "stream"] }
futures-util = "0.3"
tokio = { version = "1.38.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rayon = "1.10.0"
num_cpus = "1.16.0"
whoami = "1.5.1"
base64 = "0.22.1"
once_cell = "1.19.0"
tiny_http = "0.12.0"
url = "2.5.0"
sysinfo = "0.30.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
